Adding Under Construction indicator

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@ Optional theme
 -->
 <!DOCTYPE html>
 <html lang="en">
+<div class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  <span class="sr-only">Error:</span>
+  Currently Under Construction
+</div>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
