--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Welcome to ProgGroup</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -55,7 +55,7 @@
                     <li>
                         <a class="page-scroll" href="#about">About Us</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
@@ -63,7 +63,7 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -86,16 +86,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Here is where we will be adding our About Me!</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Totally meant to do this early this week but... LIFE happened :/</p>
                     <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <!--<section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -233,17 +233,17 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <h2>TOTES legit website</h2>
+                <!-- <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a> -->
             </div>
         </div>
     </aside>
-
+<!--
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -262,7 +262,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
