--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1>This is a landing page. DO YOU LIKE?</h1>
                 <hr>
-                <p>I liked this theme. CLick below to go to About Us!</p>
+                <p>I liked this theme. Click below to go to About Us!</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About Us</a>
             </div>
         </div>
