Added About Me html

--- a/aboutus.html
+++ b/aboutus.html
@@ -46,14 +46,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Prog Group</a>
+                <a class="navbar-brand page-scroll" href="index.html">Prog Group</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="aboutus.html">About Us</a>
+                        <a class="page-scroll" href="index.html">Home</a>
                     </li>
                     <!-- <li>
                         <a class="page-scroll" href="#services">Services</a>
@@ -74,27 +74,13 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>This is a landing page. DO YOU LIKE?</h1>
+                <h1>ABOUT US HERE</h1>
                 <hr>
-                <p>I liked this theme. Click below to go to About Us!</p>
-                <a href="aboutus.html" class="btn btn-primary btn-xl page-scroll">About Us</a>
+                <p>SO go ahead and mess with stuff here.</p>
+                <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">About Us</a>-->
             </div>
         </div>
     </header>
-
-	<!--
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Here is where we will be adding our About Me!</h2>
-                    <hr class="light">
-                    <p class="text-faded">Totally meant to do this early this week but... LIFE happened :/</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-                </div>
-            </div>
-        </div>
-    </section>-->
 
     <!--<section id="services">
         <div class="container">
